Update 13.사진 크롤링 방법.md

--- a/13.사진 크롤링 방법.md
+++ b/13.사진 크롤링 방법.md
@@ -27,7 +27,7 @@ pip install selenium
 from selenium import webdriver
 
 driver = webdriver.Chrome()
-driver.get('https://www.naver.com/')
+driver.get("https://www.naver.com/")
 ```
 
 * 옵션을 설정해야 합니다.
@@ -40,7 +40,7 @@ chrome_options = Options()
 chrome_options.add_experimental_option("detach", True)
 
 driver = webdriver.Chrome(options=chrome_options)
-driver.get('https://www.naver.com/')
+driver.get("https://www.naver.com/")
 ```
 
 * 구글 이미지 검색 URL을 확인합니다.
@@ -78,7 +78,7 @@ chrome_options.add_experimental_option("detach", True)
 driver = webdriver.Chrome(options=chrome_options)
 driver.get('https://www.google.com/imghp?hl=ko&tab=ri&authuser=0&ogbl')
 elem = driver.find_element(By.CLASS_NAME, "gLFyf")
-elem.send_keys('손흥민')
+elem.send_keys("손흥민")
 elem.send_keys(Keys.RETURN)
 ```
 
@@ -88,4 +88,109 @@ elem.send_keys(Keys.RETURN)
   * ```driver.find_elements(By.CSS_SELECTOR, "")```를 사용합니다.
 * ```driver.find_elements(By.CSS_SELECTOR, ".rg_i.Q4LuWd")```
   *  점(.)은 클래스를 나타냅니다.
-  *  rg_i.Q4LuWd는 rg_i와 Q4LuWd클래스가 같이 있다는 뜻입니다.
+  *  .rg_i.Q4LuWd는 rg_i와 Q4LuWd클래스가 같이 있다는 뜻입니다.
+* 이미지 클래스 이름이 바뀌는 경우가 있습니다.
+* 검색 결과가 다 나올 때까지 기다려야 합니다.
+```python
+from selenium import webdriver
+from selenium.webdriver.chrome.options import Options
+from selenium.webdriver.common.by import By
+from selenium.webdriver.common.keys import Keys
+from time import sleep
+
+chrome_options = Options()
+chrome_options.add_experimental_option("detach", True)
+
+driver = webdriver.Chrome(options=chrome_options)
+driver.get('https://www.google.com/imghp?hl=ko&tab=ri&authuser=0&ogbl')
+elem = driver.find_element(By.CLASS_NAME, 'gLFyf')
+elem.send_keys('손흥민')
+elem.send_keys(Keys.RETURN)
+sleep(2)
+elems = driver.find_elements(By.CSS_SELECTOR, ".rg_i.Q4LuWd")
+elems[0].click()
+```
+
+* 클릭했을 때 큰 이미지의 HTML 요소를 확인합니다.
+ * sFlh5c pT0Scc iPVvYb
+* 이미지의 src 주소로 이미지를 다운로드 받을 수 있습니다.
+* get_attribute로 src 값을 확인합니다.
+```python
+from selenium import webdriver
+from selenium.webdriver.chrome.options import Options
+from selenium.webdriver.common.by import By
+from selenium.webdriver.common.keys import Keys
+from time import sleep
+
+chrome_options = Options()
+chrome_options.add_experimental_option("detach", True)
+
+driver = webdriver.Chrome(options=chrome_options)
+driver.get('https://www.google.com/imghp?hl=ko&tab=ri&authuser=0&ogbl')
+elem = driver.find_element(By.CLASS_NAME, 'gLFyf')
+elem.send_keys('손흥민')
+elem.send_keys(Keys.RETURN)
+sleep(2)
+elems = driver.find_elements(By.CSS_SELECTOR, ".rg_i.Q4LuWd")
+elems[0].click()
+sleep(2)
+elem = driver.find_element(By.CSS_SELECTOR, ".sFlh5c.pT0Scc.iPVvYb")
+print(elem.get_attribute('src'))
+```
+
+* urllib 모듈을 사용해서 이미지를 다운로드 받을 수 있습니다. 
+```python
+from selenium import webdriver
+from selenium.webdriver.chrome.options import Options
+from selenium.webdriver.common.by import By
+from selenium.webdriver.common.keys import Keys
+from time import sleep
+import urllib.request
+
+chrome_options = Options()
+chrome_options.add_experimental_option("detach", True)
+
+driver = webdriver.Chrome(options=chrome_options)
+driver.get('https://www.google.com/imghp?hl=ko&tab=ri&authuser=0&ogbl')
+elem = driver.find_element(By.CLASS_NAME, 'gLFyf')
+elem.send_keys('손흥민')
+elem.send_keys(Keys.RETURN)
+sleep(2)
+elems = driver.find_elements(By.CSS_SELECTOR, ".rg_i.Q4LuWd")
+elems[0].click()
+sleep(2)
+elem = driver.find_element(By.CSS_SELECTOR, ".sFlh5c.pT0Scc.iPVvYb")
+img_src = elem.get_attribute('src')
+urllib.request.urlretrieve(img_src, '1.jpg')
+```
+
+* rg_i와 Q4LuWd 클래스를 가진 엘리먼트들로 사진을 다운로드 받습니다.
+* urllib으로 요청을 했는데 에러가 생길 수 있어서 try~except 구문을 사용합니다. 
+```python
+from selenium import webdriver
+from selenium.webdriver.chrome.options import Options
+from selenium.webdriver.common.by import By
+from selenium.webdriver.common.keys import Keys
+from time import sleep
+import urllib.request
+
+chrome_options = Options()
+chrome_options.add_experimental_option("detach", True)
+
+driver = webdriver.Chrome(options=chrome_options)
+driver.get('https://www.google.com/imghp?hl=ko&tab=ri&authuser=0&ogbl')
+elem = driver.find_element(By.CLASS_NAME, 'gLFyf')
+elem.send_keys('손흥민')
+elem.send_keys(Keys.RETURN)
+sleep(2)
+elems = driver.find_elements(By.CSS_SELECTOR, ".rg_i.Q4LuWd")
+for i, elem in enumerate(elems):
+    elem.click()
+    sleep(2)
+    img_elem = driver.find_element(By.CSS_SELECTOR, ".sFlh5c.pT0Scc.iPVvYb")
+    img_src = img_elem.get_attribute('src')
+    try:
+        urllib.request.urlretrieve(img_src, f'{i}.jpg')
+    except:
+        pass
+```
