Update 13.사진 크롤링 방법.md

--- a/13.사진 크롤링 방법.md
+++ b/13.사진 크롤링 방법.md
@@ -1,3 +1,5 @@
+# 크롬 브라우저 크롤링
+## 크롬 드라이버 설치하기
 * 컴퓨터에서 설치해서 사용해보겠습니다.
 * C드라이브에 'crawling' 폴더를 만듭니다.
 * 크롬 브라우저를 사용해서 크롤링을 하겠습니다.
@@ -15,6 +17,7 @@
 ![image](https://github.com/jerrytohub/python-skill/assets/127598703/79caad2d-46c0-420d-9185-125e1eff18d0)
 * 운영체제에 맞는 파일을 다운로드합니다.
 
+## 셀리니움 기초 사용방법
 * 크롬 드라이버 파일을 'crawling' 폴더에 놓습니다.
 * 셀레니움을 설치합니다.
 ```
@@ -43,6 +46,7 @@ driver = webdriver.Chrome(options=chrome_options)
 driver.get("https://www.naver.com/")
 ```
 
+## 사진 검색하기
 * 구글 이미지 검색 URL을 확인합니다.
 * 구글 홈페이지에서 오른쪽 위에 있는 이미지를 클릭합니다.   
 ![image](https://github.com/jerrytohub/python-skill/assets/127598703/b6f2ad1b-5a6d-4e55-9aa8-3d4eac68b333)
