Update 13.사진 크롤링 방법.md

--- a/13.사진 크롤링 방법.md
+++ b/13.사진 크롤링 방법.md
@@ -200,3 +200,45 @@ for i, elem in enumerate(elems):
 ```
 
 * 사진을 더 다운로드 받으려면 스크롤을 내리면서 계속 새로운 이미지를 불러와야 합니다.
+* 스크롤을 하다가 결과 더보기 버튼이 있으면 클릭해서 사진을 더 가져옵니다.   
+![image](https://github.com/jerrytohub/python-skill/assets/127598703/81712217-3561-4167-b0cc-8cfc1310333e)
+* 먼저 스크롤을 해보겠습니다.
+```python
+from selenium import webdriver
+from selenium.webdriver.chrome.options import Options
+from selenium.webdriver.common.by import By
+from selenium.webdriver.common.keys import Keys
+from time import sleep
+import urllib.request
+
+chrome_options = Options()
+chrome_options.add_experimental_option("detach", True)
+
+driver = webdriver.Chrome(options=chrome_options)
+driver.get('https://www.google.com/imghp?hl=ko&tab=ri&authuser=0&ogbl')
+elem = driver.find_element(By.CLASS_NAME, 'gLFyf')
+elem.send_keys('손흥민')
+elem.send_keys(Keys.RETURN)
+sleep(2)
+
+SCROLL_PAUSE_TIME = 1
+# 스크롤 높이를 구합니다.
+# execute_script는 자바스크립트 코드를 실행해줍니다.
+last_height = driver.execute_script("return document.body.scrollHeight")
+while True:
+    # 아래로 스크롤 합니다.
+    driver.execute_script("window.scrollTo(0, document.body.scrollHeight);")    
+    sleep(SCROLL_PAUSE_TIME)    
+    new_height = driver.execute_script("return document.body.scrollHeight")
+    # 스크롤을 다 했다면
+    if new_height == last_height:
+        try:
+            # 결과 더보기 버튼의 css selector를 확인합니다.
+            driver.find_element(By.CSS_SELECTOR, ".LZ4I").click()          
+        except:
+            break
+    last_height = new_height
+```
+
+
+
