--- a/13.사진 크롤링 방법.md
+++ b/13.사진 크롤링 방법.md
@@ -240,5 +240,51 @@ while True:
     last_height = new_height
 ```
 
+* 사진을 다운로드하는 코드를 추가합니다.
+```python
+from selenium import webdriver
+from selenium.webdriver.chrome.options import Options
+from selenium.webdriver.common.by import By
+from selenium.webdriver.common.keys import Keys
+from time import sleep
+import urllib.request
 
+chrome_options = Options()
+chrome_options.add_experimental_option("detach", True)
 
+driver = webdriver.Chrome(options=chrome_options)
+driver.get('https://www.google.com/imghp?hl=ko&tab=ri&authuser=0&ogbl')
+elem = driver.find_element(By.CLASS_NAME, 'gLFyf')
+elem.send_keys('손흥민')
+elem.send_keys(Keys.RETURN)
+sleep(2)
+
+SCROLL_PAUSE_TIME = 3
+# 스크롤 높이를 구합니다.
+last_height = driver.execute_script("return document.body.scrollHeight")
+while True:
+    elems = driver.find_elements(By.CSS_SELECTOR, ".rg_i.Q4LuWd")
+    for i, elem in enumerate(elems):
+        elem.click()
+        sleep(2)
+        img_elem = driver.find_element(By.CSS_SELECTOR, ".sFlh5c.pT0Scc.iPVvYb")
+        img_src = img_elem.get_attribute('src')
+        try:
+            urllib.request.urlretrieve(img_src, f'{i}.jpg')
+        except:
+            pass
+    # 아래로 스크롤 합니다.
+    driver.execute_script("window.scrollTo(0, document.body.scrollHeight);")    
+    sleep(SCROLL_PAUSE_TIME)    
+    new_height = driver.execute_script("return document.body.scrollHeight")
+    # 스크롤을 다 했다면
+    if new_height == last_height:
+        try:
+            # 결과 더보기 버튼의 css selector를 확인합니다.
+            driver.find_element(By.CSS_SELECTOR, ".LZ4I").click()          
+        except:
+            break
+    last_height = new_height
+```
+
+# 
