--- a/13.사진 크롤링 방법.md
+++ b/13.사진 크롤링 방법.md
@@ -287,4 +287,23 @@ while True:
     last_height = new_height
 ```
 
-# 
+# bing_image_downloader
+* bing_image_downloader은 빙에서 검색한 이미지를 다운로드하는 모듈입니다.
+* ```pip install bing-image-downloader```로 설치합니다.
+* query에 입력한 단어로 검색을 하고 그 단어로 폴더를 만들어서 이미지를 다운로드 합니다.
+* 너무 많이 사용하면 사진을 다운로드 하지 못하는 경우가 있습니다.
+```python
+from bing_image_downloader import downloader
+
+query = '마동석'
+downloader.download(query, 
+                    limit=20,  
+                    output_dir='./', 
+                    adult_filter_off=True, 
+                    force_replace=False, 
+                    timeout=60)
+```
+
+# 네이버 API 사용하기
+* 쇼핑 정보에서 사진의 src를 확인합니다.
+* urllib 모듈을 사용해서 사진을 다운로드합니다.
