Update 13.사진 크롤링 방법.md

--- a/13.사진 크롤링 방법.md
+++ b/13.사진 크롤링 방법.md
@@ -295,7 +295,7 @@ while True:
 ```python
 from bing_image_downloader import downloader
 
-query = '마동석'
+query = '손흥민'
 downloader.download(query, 
                     limit=20,  
                     output_dir='./', 
