Update 13.사진 크롤링 방법.md

--- a/13.사진 크롤링 방법.md
+++ b/13.사진 크롤링 방법.md
@@ -302,8 +302,6 @@ downloader.download(query,
                     adult_filter_off=True, 
                     force_replace=False, 
                     timeout=60)
-```
-
-# 네이버 API 사용하기
+```# 네이버 API 사용하기
 * 쇼핑 정보에서 사진의 src를 확인합니다.
 * urllib 모듈을 사용해서 사진을 다운로드합니다.
