Update 14.파이썬으로 이미지 처리하기.md

--- a/14.파이썬으로 이미지 처리하기.md
+++ b/14.파이썬으로 이미지 처리하기.md
@@ -1,1 +1,53 @@
+# pillow
+* Python Imaging Library(PIL)라는 파이썬 이미지 처리 라이브러리의 지원이 2011년 중단되었습니다.
+* pillow가 PIL의 다음 프로젝트로 나왔습니다.
+* pillow를 설치합니다.
+```
+pip install pillow
+```
+* C드라이브에 'image' 폴더를 만듭니다.
+* 사진을 하나 다운로드 받습니다.
+```python
+from PIL import Image
 
+# 이미지를 불러옵니다.
+img = Image.open('1.jpg')
+# 이미지를 보여줍니다.
+img.show()
+```
+
+* 이미지의 여러 정보를 확인합니다.
+```python
+from PIL import Image
+
+img = Image.open('1.jpg')
+img.show()
+
+# 이미지의 여러 정보를 확인합니다.
+print(img.filename)
+print(img.format)
+print(img.size)
+print(img.width)
+print(img.height)
+print(img.mode)
+```
+
+* 다른 이미지 포맷으로 저장할 수 있습니다.
+```python
+from PIL import Image
+
+img = Image.open('1.jpg')
+img.save('1_new.webp', 'webp')
+```
+
+* 폴더에 있는 모든 사진을 png로 바꿔서 저장해보세요.
+
+* resize로 이미지의 크기를 바꿉니다.
+```python
+from PIL import Image
+
+img = Image.open('1.jpg')
+img_resized = img.resize((400,300))
+# save로 저장합니다.
+img_resized.save('1_resized.png', 'png')
+```
