Update 14.파이썬으로 이미지 처리하기.md

--- a/14.파이썬으로 이미지 처리하기.md
+++ b/14.파이썬으로 이미지 처리하기.md
@@ -33,14 +33,13 @@ print(img.mode)
 ```
 
 * 다른 이미지 포맷으로 저장할 수 있습니다.
+* 폴더에 있는 모든 사진을 png로 바꿔서 저장해보세요.
 ```python
 from PIL import Image
 
 img = Image.open('1.jpg')
-img.save('1_new.webp', 'webp')
+img.save('1_new.webp')
 ```
-
-* 폴더에 있는 모든 사진을 png로 바꿔서 저장해보세요.
 
 * resize로 이미지의 크기를 바꿉니다.
 ```python
@@ -50,4 +49,13 @@ img = Image.open('1.jpg')
 img_resized = img.resize((400,300))
 # save로 저장합니다.
 img_resized.save('1_resized.png', 'png')
+```
+
+* rotate로 회전합니다.
+```python
+from PIL import Image
+
+img = Image.open('1.jpg')
+img_rotated = img.rotate(90)
+img_rotated.show()
 ```
