Update 14.파이썬으로 이미지 처리하기.md

--- a/14.파이썬으로 이미지 처리하기.md
+++ b/14.파이썬으로 이미지 처리하기.md
@@ -59,3 +59,120 @@ img = Image.open('1.jpg')
 img_rotated = img.rotate(90)
 img_rotated.show()
 ```
+
+* 이미지를 대칭으로 바꿀 수 있습니다.
+* 좌우대칭: Image.FLIP_LEFT_RIGHT
+* 상하대칭: Image.FLIP_TOP_BOTTOM
+```python
+from PIL import Image
+
+img = Image.open('1.jpg')
+img_flipped_LR = img.transpose(Image.FLIP_LEFT_RIGHT)
+img_flipped_LR.show()
+```
+
+* 이미지를 흑백으로 바꿉니다.
+```python
+from PIL import Image
+
+img = Image.open('1.jpg')
+img_gray = img.convert("L")
+img_gray.show()
+```
+
+* 이미지에 텍스트를 추가할 수 있습니다.
+```python
+# 필요한 모듈을 가져옵니다.
+from PIL import  Image, ImageDraw, ImageFont
+
+img = Image.open('1.jpg')
+
+# 크기를 확인합니다.
+width, height = img.size
+
+# 이미지를 그립니다.
+draw = ImageDraw.Draw(img)
+
+# 텍스트를 정합니다.
+text = "파이썬 코딩"
+
+# 폰트를 정합니다.
+# C:\Windows\Fonts에 폰트가 있습니다.
+# 폰트 종류가 크기를 정합니다.
+font = ImageFont.truetype('NANUMPEN.TTF', 30)
+
+# 좌표로 어디에 글씨를 쓸 것인지 정합니다.
+draw.text((0, 0), text, fill='white', font=font)
+
+img.show()
+```
+
+* 오른쪽 아래에 글자를 추가할 수 있습니다.
+* 글자의 크기를 계산해서 좌표를 구합니다.
+```python
+# 필요한 모듈을 가져옵니다.
+from PIL import  Image, ImageDraw, ImageFont
+
+img = Image.open('1.jpg')
+width, height = img.size
+draw = ImageDraw.Draw(img)
+text = "파이썬 코딩"
+font = ImageFont.truetype('NANUMPEN.TTF', 70)
+
+# 글자의 크기를 구합니다.
+left, top, right, bottom = font.getbbox(text)
+width_text, height_text = right - left, bottom - top
+
+# 여백을 정합니다.
+margin = 10 
+x = width - width_text - margin
+y = height - height_text - margin
+
+draw.text((x, y), text, fill='white', font=font)
+img.show()
+```
+
+* 여러 이미지를 합칠 수 있습니다.
+```python
+# 필요한 모듈을 가져옵니다.
+from PIL import  Image
+
+img1 = Image.open('1.jpg')
+img2 = Image.open('2.jpg')
+
+img1 = img1.resize((300, 300))
+img2 = img2.resize((300, 300))
+
+# 가로, 세로 길이를 구합니다.
+img1_size = img1.size
+
+# 새로운 이지미를 만듭니다. 
+# (img1.size[0], img1.size[1]*2)는 가로 세로 크기입니다.
+new_image = Image.new('RGB',(img1.size[0], img1.size[1]*2), (250,250,250))
+
+# 붙여 넣습니다.
+new_image.paste(img1,(0,0))
+new_image.paste(img2,(0,img1_size[1]))
+
+new_image.show()
+```
+
+# rembg
+* rembg는 이미지의 배경을 제거하는 라이브러리입니다.
+* rembg를 사용하면 이미지의 주요 객체를 분리하여 배경 없는 PNG 이미지로 만들 수 있습니다.
+```python
+from rembg import remove 
+from PIL import Image 
+
+img = Image.open("1.jpg") 
+
+# 배경을 제거합니다.
+img_remove = remove(img) 
+
+img_remove.save("1_remove.png")
+```
+
+# 크롤링한 사진으로 자동화하기
+* 사진 위에 이름으로 워터마트를 만들어 보세요.
+* 사진을 세로로 길게 붙여서 한 장의 사진을 만들어 보세요.
+* 사진의 배경을 지워서 PNG 이미지로 저장하세요.
