Update 14.파이썬으로 이미지 처리하기.md

--- a/14.파이썬으로 이미지 처리하기.md
+++ b/14.파이썬으로 이미지 처리하기.md
@@ -160,6 +160,9 @@ new_image.show()
 # rembg
 * rembg는 이미지의 배경을 제거하는 라이브러리입니다.
 * rembg를 사용하면 이미지의 주요 객체를 분리하여 배경 없는 PNG 이미지로 만들 수 있습니다.
+```
+pip install rembg
+```
 ```python
 from rembg import remove 
 from PIL import Image 
