--- a/10.이메일 자동화.md
+++ b/10.이메일 자동화.md
@@ -6,7 +6,7 @@
 * 메일을 선택합니다.
 * 왼쪽 메뉴에서 환경설정을 클릭합니다.   
 ![image](https://github.com/jerrytohub/python-skill/assets/127598703/f9bb1cb1-07b3-4b31-bf9a-843f7e9c6353)
-* POP3/SMTP 설정을 선택합니다.   
+* POP3/IMAP 설정을 선택합니다.   
 ![image](https://github.com/jerrytohub/python-skill/assets/127598703/62d1568f-882f-4209-bde7-a1460e44448a)
 * IMAP/SMTP 설정을 선택합니다.   
 ![image](https://github.com/jerrytohub/python-skill/assets/127598703/13ce6de5-c060-4e77-9e63-74a0643e55b8)
