--- a/11.네이버 API 사용하기.md
+++ b/11.네이버 API 사용하기.md
@@ -1,5 +1,5 @@
 # 네이버 API 신청하기
-* API는 Application Programming Interface(애플리케이션 프로그램 인터페이스)의 줄임말입니다.
+* API는 Application Programming Interface(애플리케이션 프로그래밍 인터페이스)의 줄임말입니다.
 * 애플리케이션은 고유한 기능을 가진 소프트웨어를 나타냅니다.
 * 인터페이스는 두 애플리케이션 간의 약속이라고 할 수 있습니다.
 * 이 약속은 요청과 응답을 사용하여 두 애플리케이션이 서로 통신하는 방법을 정의합니다.
