Update 13.사진 크롤링 방법.md

--- a/13.사진 크롤링 방법.md
+++ b/13.사진 크롤링 방법.md
@@ -291,6 +291,7 @@ while True:
 * bing_image_downloader은 빙에서 검색한 이미지를 다운로드하는 모듈입니다.
 * ```pip install bing-image-downloader```로 설치합니다.
 * query에 입력한 단어로 검색을 하고 그 단어로 폴더를 만들어서 이미지를 다운로드 합니다.
+* limit로 사진 수를 정합니다.
 * 너무 많이 사용하면 사진을 다운로드 하지 못하는 경우가 있습니다.
 ```python
 from bing_image_downloader import downloader
