Update 14.파이썬으로 이미지 처리하기.md

--- a/14.파이썬으로 이미지 처리하기.md
+++ b/14.파이썬으로 이미지 처리하기.md
@@ -98,7 +98,7 @@ text = "파이썬 코딩"
 
 # 폰트를 정합니다.
 # C:\Windows\Fonts에 폰트가 있습니다.
-# 폰트 종류가 크기를 정합니다.
+# 폰트 종류와 크기를 정합니다.
 font = ImageFont.truetype('NANUMPEN.TTF', 30)
 
 # 좌표로 어디에 글씨를 쓸 것인지 정합니다.
